some changes in enum Tile Types