@@ -6,31 +6,32 @@ import enums.resources.ResourceTypes;
 
 import java.util.Arrays;
 import java.util.HashSet;
+import java.util.List;
 import java.util.Random;
 
 public enum TileFeatureTypes implements TileTypes {
     VALLEY("valley", 2, 0, 0, -33, 1,
-            new HashSet<ResourceTypes>(Arrays.asList(LuxuryResourceTypes.SUGAR, BonusResourceTypes.WHEAT))), // jolge
+            new HashSet<>(Arrays.asList(LuxuryResourceTypes.SUGAR, BonusResourceTypes.WHEAT))), // jolge
     JUNGLE("jungle", 1, 1, 0, 25, 2,
-            new HashSet<ResourceTypes>(Arrays.asList(BonusResourceTypes.GAZELLE, LuxuryResourceTypes.COTTON,
+            new HashSet<>(Arrays.asList(BonusResourceTypes.GAZELLE, LuxuryResourceTypes.COTTON,
                     LuxuryResourceTypes.COLOR, LuxuryResourceTypes.SILK))), // jangal
-    ICE("ice", 0, 0, 0, 0, 9999, new HashSet<ResourceTypes>()),
+    ICE("ice", 0, 0, 0, 0, 9999, new HashSet<>()),
     FOREST("forest", 1, -1, 0, 25, 2,
-            new HashSet<ResourceTypes>(
+            new HashSet<>(
                     Arrays.asList(BonusResourceTypes.BANANA, LuxuryResourceTypes.JEWEL, LuxuryResourceTypes.COLOR))), // jangale
     // anbooh
-    SWAMP("swamp", -1, 0, 0, -33, 2, new HashSet<ResourceTypes>(Arrays.asList(LuxuryResourceTypes.SUGAR))), // mordab
-    OASIS("oasis", 3, 0, 1, -33, 1, new HashSet<ResourceTypes>()), // vahe
-    LAKE("lake", 0, 0, 1, 0, 9999, new HashSet<ResourceTypes>()),
-    NULL("nothing" , 0 , 0 , 0 , 0 , 0,new HashSet<ResourceTypes>());
+    SWAMP("swamp", -1, 0, 0, -33, 2, new HashSet<>(List.of(LuxuryResourceTypes.SUGAR))), // mordab
+    OASIS("oasis", 3, 0, 1, -33, 1, new HashSet<>()), // vahe
+    LAKE("lake", 0, 0, 1, 0, 9999, new HashSet<>()),
+    NULL("nothing" , 0 , 0 , 0 , 0 , 0, new HashSet<>());
 
-    private String name;
+    private final String name;
     private double food;
-    private double production;
-    private double gold;
-    private int combatImpact;
-    private int movementPoint;
-    private HashSet<ResourceTypes> possibleResources;
+    private final double production;
+    private final double gold;
+    private final int combatImpact;
+    private final int movementPoint;
+    private final HashSet<ResourceTypes> possibleResources;
 
     TileFeatureTypes(String name, double food, double production, double gold, int combatImpact,
                      int movementPoint, HashSet<ResourceTypes> possibleResources) {
